# tl-dw

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  foo.txt  pyproject.toml  run_local.py  test_lambda_function.py
.github/workflows/: test.yml
infra/: main.tf
lambda/: Dockerfile  build-and-push.sh  create_layer.sh  docker-compose.yml  entrypoint.sh  heroku.yaml  heroku_deploy.sh  lambda_function.py  requirements.txt
src/tldw/: __init__.py  tldw.py
tests/: test_tldw.py
